--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <h4 class="home-top-title text-white mb-3">Tarun Padath</h4>
                                 <h1 class="home_title text-white text-capitalize mb-0">Full Stack Developer</h1>
                                 <div class="home_btn_manage mt-4 pt-2">
-                                    <a href="https://drive.google.com/file/d/1rg4gjErszQn8ZYyMHNIzedu-U3GP-05b/view?usp=sharing" class="btn btn_outline_custom btn-rounded">Resume</a>
+                                    <a href="https://drive.google.com/file/d/1rg4gjErszQn8ZYyMHNIzedu-U3GP-05b/view?usp=sharing" target="_blank" class="btn btn_outline_custom btn-rounded">Resume</a>
                                 </div>
                             </div>
                         </div>
@@ -324,10 +324,10 @@
                                         operations.</p>
                             <div class="row mt-auto">
                                 <div class="col-6">
-                                    <a href="https://snowware.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
+                                    <a href="https://snowware.tarunpadath.com/" target="_blank" class="btn btn_outline_custom_2 btn-rounded">Live</a>
                                 </div>
                                 <div class="col-6">
-                                    <a href="https://github.com/taruntula/snow-ware.git" class="btn btn_outline_custom_3 btn-rounded">Source</a>
+                                    <a href="https://github.com/taruntula/snow-ware.git" target="_blank" class="btn btn_outline_custom_3 btn-rounded">Source</a>
                                 </div>
                             </div>
 
@@ -348,7 +348,7 @@
                             scheduling and managing shuttles, shuttle routes and employees.</p>
                             <div class="row mt-auto justify-content-center">
                                 <div class="col-8">
-                                    <a href="https://youtu.be/mN-dYsr9fzE" class="btn btn_outline_custom_2 btn_rounded">Demo Video</a>
+                                    <a href="https://youtu.be/mN-dYsr9fzE" target="_blank" class="btn btn_outline_custom_2 btn_rounded">Demo Video</a>
                                 </div>
                             </div>
                         </div>
@@ -367,10 +367,10 @@
                              <p class="text-muted mb-0">A card-matching memory game with live updating statistics. Implemented HTML, CSS, and Flexbox to develop a responsive mobile and desktop adaptability. Built logic and operations with jQuery and JavaScript.</p>
                              <div class="row mt-auto">
                                  <div class="col-6">
-                                    <a href="https://memorymatch.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
+                                    <a href="https://memorymatch.tarunpadath.com/" target="_blank" class="btn btn_outline_custom_2 btn-rounded">Live</a>
                                  </div>
                                  <div class="col-6">
-                                    <a href="https://github.com/taruntula/memory-match.git" class="btn btn_outline_custom_3 btn-rounded">Source</a>
+                                    <a href="https://github.com/taruntula/memory-match.git" target="_blank" class="btn btn_outline_custom_3 btn-rounded">Source</a>
                                  </div>
                              </div>
                         </div>
@@ -449,9 +449,9 @@
                 <div class="col-lg-12">
                     <div class="text-center text-white about_social_icons">
                         <ul class="list-unstyled list-inline mb-3">
-                            <li class="list-inline-item"><a href="mailto:tarunpadath@gmail.com"><i class="mdi mdi-gmail"></i></a></li>
-                            <li class="list-inline-item"><a href="https://github.com/taruntula"><i class="devicon-github-plain"></i></a></li>
-                            <li class="list-inline-item"><a href="https://linkedin.com/in/tarunpadath"><i class="mdi mdi-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="mailto:tarunpadath@gmail.com" target="_blank"><i class="mdi mdi-gmail"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/taruntula" target="_blank"><i class="devicon-github-plain"></i></a></li>
+                            <li class="list-inline-item"><a href="https://linkedin.com/in/tarunpadath" target="_blank"><i class="mdi mdi-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
